--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
 .App {
   text-align: center;
 }
+
+.round{
+  height: 1.3rem;
+  width: 1.3rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
